--- a/Example/titlepage.tex
+++ b/Example/titlepage.tex
@@ -8,7 +8,7 @@
 
 \area{F\'isica B\'asica}
 
-\comentario{Disserta\c{c}\~ao apresentada ao Programa de P\'os-Gradua\c{c}\~ao em F\'isica do Instituto de F\'isica de S\~ao Carlos da Universidade de S\~ao Paulo, para obten\c{c}\~ao do t\'itulo de mestre em Ci\^encias.}
+\comentario{Disserta\c{c}\~ao apresentada ao Programa de P\'os-Graduaç\~ao em F\'isica do Instituto de F\'isica de S\~ao Carlos da Universidade de S\~ao Paulo, para obtenç\~ao do t\'itulo de mestre em Ci\^encias.}
 
 \instituicao{Grupo de Pesquisa \par Departamento Disso ou Daquilo \par Instituto de Física de S\~ao Carlos - Universidade de S\~ao Paulo}
 
@@ -21,8 +21,8 @@
 \folhaderosto
 
 \begin{center}
-  {\scshape \ttfamily AUTORIZO A REPRODU\c{C}\~AO E DIVULGA\c{C}\~AO
-  TOTAL OU PARCIAL DESTE TRABALHO, POR QUALQUER MEIO CONVENCIONAL OU
+  {\scshape \ttfamily AUTORIZO A REPRODU\c{C}\~AO E DIVULGA\c{C}\~AO TOTAL OU
+  PARCIAL DESTE TRABALHO, POR QUALQUER MEIO CONVENCIONAL OU
   ELETR\^ONICO, PARA FINS DE ESTUDO E PESQUISA, DESDE QUE CITADA A
   FONTE.}
   
