--- a/Example/Resumo.tex
+++ b/Example/Resumo.tex
@@ -1,9 +1,9 @@
 \chapter*{RESUMO}
 
 \begin{citacaotese}
-  SOBRENOME, T. S. \textit{Título da tese entra aqui}. 2011. 160
-  p. Dissertação de Mestrado -- Instituto de F\'isica de S\~ao Carlos,
-  Universidade de S\~ao Paulo, S\~ao Carlos, 2011.
+  SOBRENOME, T. S. \textit{\ABNTtitulodata}. 2011. 160
+  p. Disserta\c{c}\~ao de Mestrado -- Instituto de F\'isica de S\~ao
+  Carlos, Universidade de S\~ao Paulo, S\~ao Carlos, 2011.
 \end{citacaotese}
 
 \begin{resumo}
@@ -57,8 +57,8 @@
 
 \begin{citacaotese}
   MOSQUEIRO, T. S. \textit{Title of the Thesis Here}. 2011. 160
-  p. Dissertação de Mestrado -- Instituto de F\'isica de S\~ao Carlos,
-  Universidade de S\~ao Paulo, S\~ao Carlos, 2011.
+  p. Disserta\c{c}\~ao de Mestrado -- Instituto de F\'isica de S\~ao
+  Carlos, Universidade de S\~ao Paulo, S\~ao Carlos, 2011.
 \end{citacaotese}
   
 \begin{resumo}
@@ -102,5 +102,6 @@
 \end{resumo}
 
 \begin{keywords}
-	Spintronics. Quantum well. Spin-orbit coupling. Quantum electrodynamics.
+  Spintronics. Quantum well. Spin-orbit coupling. Quantum
+  electrodynamics.
 \end{keywords}
