--- a/pkg/ifsc_pretextual.tex
+++ b/pkg/ifsc_pretextual.tex
@@ -12,16 +12,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
 %%%%%%%%%%%%%% CAPA %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -220,6 +210,31 @@
 %%%%%%%%%%%%%%%%%% RESUMO %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newenvironment{resumo}
-  {
-  }
-  {}
+{}
+{}
+
+\newenvironment{citacaotese}
+{
+  \setlength{\parindent}{0cm}
+}
+{
+ \newline 
+}
+
+
+\newenvironment{palavraschave}
+{
+	\vspace{1.5cm} 
+	\setlength{\parindent}{0cm}
+	\textsc{Palavras-chave}:
+}
+{}
+
+
+\newenvironment{keywords}
+{
+	\vspace{1.5cm} 
+	\setlength{\parindent}{0cm}
+	\textsc{Keywords}:
+}
+{}
