Figure environment is done!

--- a/Example/Capitulo1_Intro.tex
+++ b/Example/Capitulo1_Intro.tex
@@ -106,6 +106,14 @@ accumsan ut pulvinar augue scelerisque. Donec dignissim quam ut metus
 cursus eleifend. Cras vestibulum odio vitae leo placerat ut egestas
 ipsum tristique.
 
+\begin{figure}
+  \caption{Atrator ca\'otico de Lorentz, conhecido como asa de
+    borboleta. Os par\^ametros foram ajustados ($\rho = 28$, $\sigma =
+    10$, e $\beta = 8/3$) para evidenciar o atrator estranho.}
+  \includegraphics[scale = 0.5]{Lorentz_output.png}
+  \fonte{}
+\end{figure}
+
 Duis nisi eros, laoreet id laoreet mattis, tristique nec
 metus. Phasellus at ante a eros tincidunt ultricies ut sit amet
 dolor. Mauris imperdiet erat vitae nisi scelerisque molestie. Nam sem
