REFAZENDO local legenda de figura.

--- a/Example/Capitulo1_Intro.tex
+++ b/Example/Capitulo1_Intro.tex
@@ -107,11 +107,11 @@ cursus eleifend. Cras vestibulum odio vitae leo placerat ut egestas
 ipsum tristique.
 
 \begin{figure}
+  \includegraphics[scale = 0.5]{Lorentz_output.png}
   \caption{Atrator ca\'otico de Lorentz, conhecido como asa de
     borboleta. Os par\^ametros foram ajustados ($\rho = 28$, $\sigma =
     10$, e $\beta = 8/3$) para evidenciar o atrator estranho.}
-  \includegraphics[scale = 0.5]{Lorentz_output.png}
-  \fonte{}
+  \fonte{} % Note que sem nada, ele jah completa com proprio autor!
 \end{figure}
 
 Duis nisi eros, laoreet id laoreet mattis, tristique nec
