--- a/pkg/ifsc.sty
+++ b/pkg/ifsc.sty
@@ -45,5 +45,5 @@
 
 \newcommand{\IFSCfontdefault}{Elaborada pelo autor.}
 \newcommand{\IFSCfontetag}{{Fonte:}}
-\newcommand{\fonte}[1]{\newline\IFSCfontetag
+\newcommand{\fonte}[1]{\IFSCfontetag
   ~\ifthenelse{\equal{#1}{}}{\IFSCfontdefault}{#1}}
