Fixing additional pages before acknowledgements

--- a/Example/Titulo.tex
+++ b/Example/Titulo.tex
@@ -1,16 +1,16 @@
 \universidade{Universidade de S\~ao Paulo \\ Instituto de F\'isica de S\~ao Carlos}
 
-\autor{Autor da tese}
+\autor{Thiago Schiavo Mosqueiro}
 
-\titulo{T\'{\i}tulo da sua tese}
+\titulo{Processamento de Informa\c{c}\~ao em Redes Neurais}
 
-\orientador{Prof. Dr. Nome do Seu Orientador}
+\orientador{Prof. Dr. Leonardo Paulo Maia}
 
 \area{F\'isica B\'asica}
 
-\comentario{Disserta\c{c}\~ao apresentada ao Programa de P\'os-Gradua\c{c}\~ao em F\'isica do Instituto de F\'isica de S\~ao Carlos da Universidade de S\~ao Paulo, para obten\c{c}\~ao do t\'itulo de mestre em Ci\^encias.}
+\comentario{Tese apresentada ao Programa de P\'os-Gradua\c{c}\~ao em F\'isica do Instituto de F\'isica de S\~ao Carlos da Universidade de S\~ao Paulo, para obten\c{c}\~ao do t\'itulo de doutor em Ci\^encias.}
 
-\instituicao{Grupo de Pesquisa \par Departamento Disso ou Daquilo \par Instituto de Física de S\~ao Carlos - Universidade de S\~ao Paulo}
+\instituicao{Neurobiof\'isica \par Departamento de F\'isica e Ci\^encia Interdisciplinar \par Instituto de Física de S\~ao Carlos - Universidade de S\~ao Paulo}
 
 \local{S\~ao Carlos}
 
@@ -32,6 +32,10 @@
     fichacatalografica
   \end{center}
 \end{center}
+
+
+\FimTitulos
+
 
 
 % \begin{folhadeaprovacao}
