--- a/pkg/ifsc_pretextual.tex
+++ b/pkg/ifsc_pretextual.tex
@@ -10,7 +10,11 @@
     }%
 
 
-
+\newcommand{\FimTitulos}{
+\newpage
+\phantom{Breu}
+\newpage
+}
 
 %%%%%%%%%%%%%% CAPA %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
