Adding fictional names and titles

--- a/Example/Titulo.tex
+++ b/Example/Titulo.tex
@@ -1,10 +1,10 @@
 \universidade{Universidade de S\~ao Paulo \\ Instituto de F\'isica de S\~ao Carlos}
 
-\autor{Thiago Schiavo Mosqueiro}
+\autor{Autor desta Tese}
 
-\titulo{Processamento de Informa\c{c}\~ao em Redes Neurais}
+\titulo{T\'itulo da Tese}
 
-\orientador{Prof. Dr. Leonardo Paulo Maia}
+\orientador{Prof. Dr. Nome do Orientador}
 
 \area{F\'isica B\'asica}
 
